--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "typescript": "^5.0.3"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.39.1"
+    "@finsweet/ts-utils": "^0.39.1",
+    "locomotive-scroll": "^4.1.4",
+    "splitting": "^1.0.6"
   }
 }
